--- a/github-user-search/src/pages/Home/styles.css
+++ b/github-user-search/src/pages/Home/styles.css
@@ -1,31 +1,38 @@
-.home-container {
-    margin: 115px 700px 270px 120px;
-  }
-  
-  .title {
-    height: 130px;
-    width: 580px;
-  }
-  
-  .title h1 {
-    font-size: 40px;
-    line-height: 64px;
-    display: flex;
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;700&display=swap');
+
+.home-container{
+    margin-top: 180px;
     align-items: center;
     letter-spacing: 0.02em;
+    margin-left: 120px;
+    margin-bottom: 265px;
+}
+.home-title{
+    font-family: 'Red Hat Display', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 64px;
     color: #062847;
-  }
-  
-  .description {
-    height: 215px;
-    width: 610px;
+    margin-bottom: 25px;    
+}
+.home-text{
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: normal;
     font-size: 20px;
     line-height: 36px;
     color: #5A6774;
-    margin-bottom: 50px;
-  }
-  
-  .description a {
-    text-decoration: none;
-    color: #18A0FB;
-  }
+    margin-bottom: 48px;    
+}
+.home-btn{
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    border-radius: 4px;
+    height: 40px;
+    width: 101px;
+   
+}
